# dojo-cpp

./: .clang-format  CMakeLists.txt
src/: CMakeLists.txt  CodeKata.cpp
src/include/: CodeKata.h  Grid.h
test/: CMakeLists.txt  CodeKataTest.cpp  GridTest.cpp  TestMain.cpp
